<resources>
    <string name="app_name">掌上邑大</string>
    <string name="title_notice">通知</string>
    <string name="title_table">课程表</string>
    <string name="title_score">查成绩</string>
    <string name="title_compass">发现</string>
    <string name="title_add_table">导入课表</string>
    <string name="update">有新版本可以下载，是否下载？</string>
    <string name="autoUpdate">有新版本可以下载，是否下载？(老是打扰？可以在更多中取消自动更新提醒)</string>
    <string name="offline">网络好像出了点问题，请检查是否联网！</string>
    <string name="title_set_zc">设置当前周</string>
    <string name="share_content">给你分享一个好东西，可以查成绩，查课表，查考试安排，可以查第二课堂学分，等等，很适合邑大人使用，这个app的名字就叫做掌上邑大。网址：www.imstuding.com可以下载哦！</string>
    <string name="btn_active">确认</string>
    <string name="btn_negative">取消</string>
    <string name="active_string1">程序将打开支付宝，给开发者转账的金额由你设置，可以0.01元或者更多，就当对开发者的鼓励，这和你扫码给别人转账一模一样，没有任何风险的，请不要担心。谢谢你的捐赠。</string>
    <string name="active_string2">程序将打开支付宝，将领取支付宝红包，这和你平时扫码领红包一模一样，谢谢。</string>
    <string name="passive_string">谢谢你的使用，如果可以的话，请把此应用分享给更多的人。</string>
    <string name="V1.0">V1.0</string>
    <string name="V1.0_explain">掌上邑大发布，欢迎大家提出意见和反馈，我们会努力的，谢谢大家的支持。</string>

    <string name="V1.1">V1.1</string>
    <string name="V1.1_explain">更新了部分情况下，课程无法显示的问题，更新了通知页面课程没有排序的问题。</string>

    <string name="V1.2">V1.2</string>
    <string name="V1.2_explain">更新了当前没有登录，然后直接点击查成绩和全选导致程序奔溃的bug，对软件内部进行了优化和清理没有的资源。</string>

    <string name="V1.3">V1.3</string>
    <string name="V1.3_explain">更新了在导入课程表的同时自动设置当前周，更新了两种查询绩点的方式。</string>

    <string name="V1.4">V1.4</string>
    <string name="V1.4_explain">更新了课程界面，提供了上课时间和下课时间的显示，修复了不导入课程表，日期显示异常的问题，新增加了对开发者的捐赠功能和支付宝红包领取功能，新增加了分享到微信好友和QQ好友的功能以及历史更新记录功能
    提供了义工，书籍，公交的查询，提供全部课程的查询。等等内容，详细请见App</string>

    <string name="about_me">    开发者：杨魁，是一名15届的五邑大学学生，
        本人来自信息工程学院150707班（一个有爱的班级），
        中途转院去了计算机学院150803班（一个除了四个美女都是帅哥的班级），
        本人绩点比较差劲，但是没有挂过科，本软件由我本人独立开发，
        由于本人能力有限，所以难免会出现很多bug，
        希望各位同学给予反馈。本软件图标来自阿里矢量图标库，
        在这里我对你们表示衷心的感谢。本软件界面图标由我的一个老朋友帮忙设计，
        非常感谢你。最要感谢的还是我女朋友，在这段时间内对我给予理解和支持，
        同时忍受着我这暴脾气，很谢谢我的女朋友。感谢父母天天对我的严加管束。
        其中的义工查询来江门义工网，公交查询来自江门公汽，图书查询来自五邑大学图书馆，
        在这里我对你们表示衷心的感谢，如果涉嫌不合法使用，请联系我，我会尽快删除。最后送给大家一句话：有梦想就去实现，别抱怨，要昂首挺胸，相信自己，努力奋斗，
        机会就会向你靠近。</string>
    <string name="app_help1">创新学分：这个是新系统里面给出的第二课堂学分，这个的值可能会跟原来的子系统的值存在差异，因为这两个系统不是同一家的。</string>
    <string name="app_help2">第二课堂学分：每一个五邑大学的同学都必须获得6个，这个可以在子系统中查询，但是由于子系统目前无法通过外网访问，所以只有当大家链接宿舍WiFi或者校园内的WiFi的时候，这个功能才可以使用
    同时由于子系统比较慢，所以请耐心等待查询过程。</string>
    <string name="app_help3">课程表：本软件可以导入多人课程表，但是下一个的课程表会覆盖上一个人的，那是因为每次导入前都清空了数据库
    同时你如果想更新课程表，那就重新导入一下。</string>
    <string name="app_help4">本软件所有201X-201X-X的都是可以点击并且选择日期的。由于五邑大学是以每周日为一周的开始，所以请在设置当前周的时候注意。</string>
    <string name="app_help5">当今社会，最重要的就是个人隐私，本软件不会后台收集你的学号和密码，本软件仅仅收集你手机的IMEI(一个手机只有一个或两个，就像人的身份证一样)，用来统计
    本软件的使用人数，因为如果软件使用人数太少，那么就不值得继续维护了，谢谢大家的理解与支持。本软件仅仅有一个开屏广告，没有其他广告，我想99%的软件
    都有开屏广告，一方面进行数据初始化，一方面向用户展示自己的产品。</string>
</resources>
