<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_operate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/home_shape"
            android:clickable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/operate" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="点击查看详细操作说明，解锁更多内容！"
                android:textColor="#000000"
                android:textSize="15dp" />
        </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="1、创新学分"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:background="@drawable/shape_score"
        android:text="@string/app_help1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="2、第二课程学分"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:background="@drawable/shape_score"
        android:text="@string/app_help2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="3、课程表"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:background="@drawable/shape_score"
        android:text="@string/app_help3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="4、操作说明"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@drawable/shape_score"
            android:text="@string/app_help4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="5、关于隐私"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@drawable/shape_score"
            android:text="@string/app_help5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>